# manning-NewYorkCityRealEstateKnowledgeGraph

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  README.md  SECURITY.md  docker-compose.yml  nginx.conf  pyproject.toml  railway.toml  start.sh
.github/workflows/: ci.yml
backend/: app.py  graph.py  neo4j_client.py  test_api.py  test_app_coverage.py  test_e2e.py  test_graph.py  test_neo4j_connection.py
cypher/: milestone_2_queries.cypher  milestone_3_queries.cypher  seed_neo4j.py  test_cypher_syntax.py
frontend/: package-lock.json  package.json  server.cjs  server.js  vite.config.ts  vitest.config.ts
frontend/app/: routes.ts
frontend/app/routes/: graph.test.tsx  graph.tsx  home.test.tsx  home.tsx  owners.test.tsx  owners.tsx  properties.test.tsx  properties.tsx  recommend.test.tsx  recommend.tsx
frontend/src/: test-setup.ts  utils.test.ts  utils.ts
gpu_training_results/: pyproject.toml
gpu_training_results/notebooks/: nyc_knowledge_graph_gpu.ipynb
gpu_training_results/outputs/: p2_m1_canonical_names.csv  pipeline_summary.json
gpu_training_results/outputs/embeddings/: graphsage_nodes.npy
mobile/: .gitignore  App.test.tsx  App.tsx  app.json  package-lock.json  package.json
mobile/screens/: GraphScreen.test.tsx  GraphScreen.tsx  HomeScreen.test.tsx  HomeScreen.tsx  OwnersScreen.test.tsx  OwnersScreen.tsx  PropertiesScreen.test.tsx  PropertiesScreen.tsx  RecommendScreen.test.tsx  RecommendScreen.tsx
