[project]
name = "manning-nyc-real-estate-knowledge-graph"
version = "0.1.0"
description = "NYC Real Estate Knowledge Graph using Neo4j, FastAPI, and ML embeddings"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "neo4j>=5.26.0",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "scikit-learn>=1.5.0",
    "node2vec>=0.4.6",
    "pykeen>=1.10.0",
    "stellargraph>=1.2.1",
    "networkx>=3.4.0",
    "thefuzz>=0.22.1",
    "python-levenshtein>=0.26.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.0",
    "jupyter>=1.1.0",
    "jupyterlab>=4.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "detect-secrets>=1.5.0",
    "pre-commit>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["backend"]
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end tests requiring live Neo4j instance",
    "unit: fast unit tests with no external dependencies",
]
addopts = "-q --tb=short"

[tool.coverage.run]
source = ["backend"]
branch = true
omit = [
    "*/test_*.py",
    "*/__init__.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
